fix: hide scrollbars on html and body

--- a/style.css
+++ b/style.css
@@ -311,3 +311,7 @@ button:disabled {
 *:focus {
     outline: none;
 }
+
+html, body {
+    overflow: hidden;
+}
